572 changes