@@ -1,53 +1,32 @@
 package net.minecraft.client.stream;
 
+import java.io.IOException;
+import java.net.*;
+import java.util.Map;
+import java.util.Set;
+
+import org.apache.logging.log4j.*;
+import org.lwjgl.opengl.GL11;
+
 import com.google.common.base.Strings;
 import com.google.common.collect.Maps;
 import com.google.gson.JsonObject;
 import com.google.gson.JsonParser;
 import com.mojang.authlib.properties.Property;
-import java.io.IOException;
-import java.net.URL;
-import java.net.URLEncoder;
-import java.util.Map;
-import java.util.Set;
+
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.stream.GuiTwitchUserMode;
-import net.minecraft.client.renderer.GlStateManager;
-import net.minecraft.client.renderer.OpenGlHelper;
-import net.minecraft.client.renderer.Tessellator;
-import net.minecraft.client.renderer.WorldRenderer;
+import net.minecraft.client.renderer.*;
 import net.minecraft.client.renderer.vertex.DefaultVertexFormats;
 import net.minecraft.client.settings.GameSettings;
 import net.minecraft.client.shader.Framebuffer;
 import net.minecraft.event.ClickEvent;
 import net.minecraft.event.HoverEvent;
-import net.minecraft.util.ChatComponentText;
-import net.minecraft.util.ChatComponentTranslation;
-import net.minecraft.util.EnumChatFormatting;
-import net.minecraft.util.HttpUtil;
-import net.minecraft.util.IChatComponent;
-import net.minecraft.util.JsonUtils;
-import net.minecraft.util.MathHelper;
-import net.minecraft.util.Util;
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
-import org.apache.logging.log4j.Marker;
-import org.apache.logging.log4j.MarkerManager;
-import org.lwjgl.opengl.GL11;
+import net.minecraft.util.*;
 import tv.twitch.AuthToken;
 import tv.twitch.ErrorCode;
-import tv.twitch.broadcast.EncodingCpuUsage;
-import tv.twitch.broadcast.FrameBuffer;
-import tv.twitch.broadcast.GameInfo;
-import tv.twitch.broadcast.IngestList;
-import tv.twitch.broadcast.IngestServer;
-import tv.twitch.broadcast.StreamInfo;
-import tv.twitch.broadcast.VideoParams;
-import tv.twitch.chat.ChatRawMessage;
-import tv.twitch.chat.ChatTokenizedMessage;
-import tv.twitch.chat.ChatUserInfo;
-import tv.twitch.chat.ChatUserMode;
-import tv.twitch.chat.ChatUserSubscription;
+import tv.twitch.broadcast.*;
+import tv.twitch.chat.*;
 
 public class TwitchStream implements BroadcastController.BroadcastListener, ChatController.ChatListener, IngestServerTester.IngestTestListener, IStream
 {
@@ -93,7 +72,7 @@ public class TwitchStream implements BroadcastController.BroadcastListener, Chat
                 {
                     try
                     {
-                        URL url = new URL("https://api.twitch.tv/kraken?oauth_token=" + URLEncoder.encode(streamProperty.getValue(), "UTF-8"));
+                        URL url = new URI("https://api.twitch.tv/kraken?oauth_token=" + URLEncoder.encode(streamProperty.getValue(), "UTF-8")).toURL();
                         String s = HttpUtil.get(url);
                         JsonObject jsonobject = JsonUtils.getJsonObject((new JsonParser()).parse(s), "Response");
                         JsonObject jsonobject1 = JsonUtils.getJsonObject(jsonobject, "token");
@@ -123,10 +102,11 @@ public class TwitchStream implements BroadcastController.BroadcastListener, Chat
                             TwitchStream.LOGGER.error(TwitchStream.STREAM_MARKER, "Given twitch access token is invalid");
                         }
                     }
-                    catch (IOException ioexception)
+
+                    catch (IOException | URISyntaxException e)
                     {
-                        TwitchStream.this.authFailureReason = IStream.AuthFailureReason.ERROR;
-                        TwitchStream.LOGGER.error(TwitchStream.STREAM_MARKER, (String)"Could not authenticate with twitch", (Throwable)ioexception);
+                        authFailureReason = IStream.AuthFailureReason.ERROR;
+                        LOGGER.error(TwitchStream.STREAM_MARKER, "Could not authenticate with twitch", e);
                     }
                 }
             };
